# blpapi-rs

./: Cargo.toml
blpapi/: Cargo.toml
blpapi-sys/: Cargo.toml  build.rs  wrapper.h
blpapi-sys/src/: lib.rs
blpapi/src/: correlation_id.rs  datetime.rs  element.rs  errors.rs  event.rs  eventdispatcher.rs  identity.rs  lib.rs  logging.rs  message.rs  name.rs  request.rs  service.rs  session.rs  session_options.rs  subscriptionlist.rs  testutil.rs  tls_options.rs  utils.rs
blpapi/src/serde/: deserialization.rs  mod.rs
