[package]
name = "blpapi"
version = "0.0.1"
authors = ["Johann Tuffe <johann.tuffe@three-stones.com>"]
edition = "2018"
description = "Safe wrapper to bloomberg blpapi library"

documentation = "https://docs.rs/blpapi"
repository = "https://github.com/tafia/blpapi-rs"

readme = "../README.md"
keywords = ["bloomberg", "bbg", "blpapi", "trading", "quant"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
blpapi-sys = { path = "../blpapi-sys", version = "0.0.1" }
chrono = { version = "0.4.9", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = []
dates = [ "chrono" ]
serialization = [ "serde" ]
